<resources>
    <string name="app_name">McKeown_Midterm</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_str">Name:</string>
    <string name="amount_str">Amount:</string>
    <string name="date_str">Date:</string>
    <string name="category_str">Category:</string>
    <string name="set_date">Set Date</string>
    <string name="pick_category">Pick Category</string>
    <string name="cancel_str">Cancel</string>
    <string name="submit_str">Submit</string>
    <string name="no_of_records">No. of Records</string>
    <string name="total_expenses">Total Expenses</string>
    <string name="expenses_summary">Expenses Summary</string>
    <string name="add_expense">Add Expense</string>
    <string name="expense_name_str">Expense Name</string>
    <string name="expense_amt_str">Expense Amount</string>
    <string name="none_str">None</string>
</resources>